2013-09-29  Paul Smith  <psmith@gnu.org>

	* main.c (main): Clear GNUMAKEFLAGS after parsing, to avoid
	proliferation of options.
	* NEWS: Document it.
	* doc/make.texi (Options/Recursion): Ditto.

2013-09-23  Eli Zaretskii  <eliz@gnu.org>

	* w32/compat/posixfcn.c: Fix the forgotten OUTPUT_SYNC conditional.

	* job.h: Ditto, but in a comment.

2013-09-22  Paul Smith  <psmith@gnu.org>

	* configure.ac: Update version to 3.99.92.
	* NEWS: Ditto.

	* implicit.c (pattern_search): After second expansion be sure to
	handle order-only markers inside the expansion properly.
	Fixes Savannah bug #31155.

	* guile.c (guile_define_module): Technically a void* cannot
	contain a pointer-to-function and some compilers warn about this.
	Cast the function pointers.
	* load.c (load_object): Ditto.

	* read.c (eval): If load_file() returns -1, don't add this to the
	"to be rebuilt" list.
	* doc/make.texi (load Directive): Document it.

	* guile.c (guile_gmake_setup): Don't initialize Guile so early.
	(func_guile): Lazily initialize Guile the first time the $(guile ..)
	function is invoked.  Guile can steal file descriptors which
	confuses our jobserver FD checking, so we don't want to initialize
	it before we have to.

	VMS port updates by Hartmut Becker <becker.ismaning@freenet.de>

	* makefile.com: Add output to the filelist.
	* output.c (va_copy): Add an implementation of this macro for VMS.
	* commands.c: Ensure filedef.h is #included before dep.h.
	* dir.c: Ditto.
	* file.c: Ditto.
	* guile.c: Ditto.
	* main.c: Ditto.
	* misc.c: Ditto.
	* read.c: Ditto.
	* rule.c: Ditto.
	* variable.c: Ditto.
	* readme.vms: Renamed to README.VMS and updates for this release.
	* Makefile.am: Ditto.
	* NEWS: Ditto.
	* README.template: Ditto.
	* Makefile.DOS.template: Ditto.

2013-09-21  Paul Smith  <psmith@gnu.org>

	* maintMakefile (check-alt-config): Create a target to test
	alternative configurations.  Each one will build make with a
	different configuration then run the test suite.
